tests/fixtures/errors/e0416_array_port_not_supported.mimz
// expect: E0416
module M {
  in vals: bits[8][4]
  out o: bit
  o = vals[0][0]
}
